--- a/.github/workflows/alarm.yml
+++ b/.github/workflows/alarm.yml
@@ -102,9 +102,12 @@ jobs:
               drop = set(drop_keys or [])
               pairs = []
               for k, v in kv.items():
-                  if k in drop or v is None: continue
-                  k = str(k).strip(); v = str(v).strip()
-                  if not k or not v: continue
+                  if k in drop or v is None:
+                      continue
+                  k = str(k).strip()
+                  v = str(v).strip()
+                  if not k or not v:
+                      continue
                   pairs.append((k, v))
               pairs.sort(key=lambda x: x[0])
               return "-".join(f"{k}={v}" for k, v in pairs)
@@ -121,19 +124,13 @@ jobs:
               METRIC_KEYS = {"compile_time", "runtime_fps", "realtime_factor"}
               out = {}
               for line in lines:
-                  if not line.strip(): continue
-                  parts = [p.strip() for p in line.strip().split("|") if "=" in p]
-                  kv = {}
-                  for p in parts:
-                      k, v = p.split("=", 1)
-                      kv[k.strip()] = v.strip()
+                  kv = dict(map(str.strip, p.split("=", 1)) for p in line.split("|") if "=" in p)
                   tid = _normalize_kv_id(kv, drop_keys=METRIC_KEYS)
-                  rt = kv.get("runtime_fps"); ct = kv.get("compile_time")
-                  try: rt = float(rt) if rt is not None else None
-                  except: rt = None
-                  try: ct = float(ct) if ct is not None else None
-                  except: ct = None
-                  out[tid] = {"runtime_fps": rt, "compile_time": ct}
+                  for key in ("runtime_fps", "compile_time"):
+                      try:
+                          out[tid][key] = float(kv[key])
+                      except (ValueError, TypeError, KeyError):
+                          pass
               return out
 
           def fmt_num(v):
@@ -151,16 +148,16 @@ jobs:
               return f"**{s}**" if highlight else s
 
           # ----- thresholds -----
-          tol_rt = float(os.environ.get("RUNTIME_REGRESSION_TOLERANCE_PCT"))
-          tol_ct = float(os.environ.get("COMPILE_REGRESSION_TOLERANCE_PCT"))
-          max_revisions = int(os.environ.get("MAX_REVISIONS"))
-          no_change_patience = int(os.environ.get("NO_CHANGE_PATIENCE"))
+          tol_rt = float(os.environ["RUNTIME_REGRESSION_TOLERANCE_PCT"])
+          tol_ct = float(os.environ["COMPILE_REGRESSION_TOLERANCE_PCT"])
+          max_revisions = int(os.environ["MAX_REVISIONS"])
+          no_change_patience = int(os.environ["NO_CHANGE_PATIENCE"])
 
-          pr_comment_path = Path(os.environ.get("PR_COMMENT_PATH")).expanduser()
-          check_body_path = Path(os.environ.get("CHECK_BODY_PATH")).expanduser()
+          pr_comment_path = Path(os.environ["PR_COMMENT_PATH"]).expanduser()
+          check_body_path = Path(os.environ["CHECK_BODY_PATH"]).expanduser()
 
           # ----- load artifact (current results) -----
-          artifacts_dir = Path(os.environ.get("ARTIFACTS_DIR")).expanduser().resolve()
+          artifacts_dir = Path(os.environ["ARTIFACTS_DIR"]).expanduser().resolve()
           if not artifacts_dir.exists():
               pr_comment_path.touch()
               check_body_path.touch()
@@ -175,11 +172,11 @@ jobs:
           current_bm = artifacts_parse_speed_txt_lines(current_txt_path.read_text(encoding="utf-8").splitlines())
 
           # ----- W&B baselines -----
-          if not os.getenv("WANDB_API_KEY"):
+          if not "WANDB_API_KEY" in os.environ:
               print("WANDB_API_KEY is not set")
               sys.exit(0)
-          ENTITY = os.environ.get("WANDB_ENTITY")
-          PROJECT = os.environ.get("WANDB_PROJECT")
+          ENTITY = os.environ["WANDB_ENTITY"]
+          PROJECT = os.environ["WANDB_PROJECT"]
 
           api = wandb.Api()
           runs_iter = api.runs(f"{ENTITY}/{PROJECT}", order="-created_at")
@@ -190,20 +187,20 @@ jobs:
           no_change = 0
 
           for run in runs_iter:
-              if run.state != "finished": 
+              if run.state != "finished":
                   continue
-              
+
               cfg = getattr(run, "config", None)
-              if cfg is None: 
+              if cfg is None:
                   continue
-              
+
               cfg = json.loads(cfg)
               raw_rev = cfg.get("revision")
               raw_bid = cfg.get("benchmark_id")
               if not raw_rev or not raw_bid:
                   if selected_revs is not None:
                       no_change += 1
-                      if no_change >= no_change_patience: 
+                      if no_change >= no_change_patience:
                           break
                   continue
 
@@ -212,20 +209,20 @@ jobs:
               if not rev or not bid:
                   if selected_revs is not None:
                       no_change += 1
-                      if no_change >= no_change_patience: 
+                      if no_change >= no_change_patience:
                           break
                   continue
 
               if (selected_revs is not None) and (rev not in selected_revs):
                   no_change += 1
-                  if no_change >= no_change_patience: 
+                  if no_change >= no_change_patience:
                       break
                   continue
 
               if (rev not in by_rev):
                   by_rev[rev]={}
                   rev_order.append(rev)
-                  if len(rev_order) >= max_revisions: 
+                  if len(rev_order) >= max_revisions:
                       selected_revs = set(rev_order)
 
               nbid = wandb_normalize_benchmark_id(bid)
@@ -237,32 +234,32 @@ jobs:
                   for row in run.scan_history(keys=["runtime_fps","compile_time"]):
                       runtime_fps = row.get("runtime_fps")
                       compile_time = row.get("compile_time")
-                      if (runtime_fps is not None) and (compile_time is not None): 
+                      if (runtime_fps is not None) and (compile_time is not None):
                           break
                       cnt += 1
-                      if cnt >= 10: 
+                      if cnt >= 10:
                           break
-                  
+
                   by_rev[rev][nbid] = {
-                      "runtime_fps": runtime_fps, 
+                      "runtime_fps": runtime_fps,
                       "compile_time": compile_time
                   }
-                  if (selected_revs is not None): 
+                  if (selected_revs is not None):
                       no_change = 0
               else:
                   if (selected_revs is not None):
                       no_change += 1
-                      if no_change >= no_change_patience: 
+                      if no_change >= no_change_patience:
                           break
 
           def mean_of(metric, bid):
               vals=[]
               for r in by_rev.keys():
-                  v = by_rev.get(r,{}).get(bid,{}).get(metric)
+                  v = by_rev.get(r, {}).get(bid, {}).get(metric)
                   if isinstance(v,(int,float)) and not (isinstance(v,float) and math.isnan(v)):
                       vals.append(float(v))
               return sum(vals) / max(len(vals), 1)
-              
+
           # ----- build TWO tables -----
           rows_rt = []
           rows_ct = []
@@ -273,8 +270,8 @@ jobs:
               base_rt = mean_of("runtime_fps", bid)
               base_ct = mean_of("compile_time", bid)
 
-              d_rt = ((cur_rt - base_rt)/base_rt*100.0) if (base_rt and isinstance(cur_rt,(int,float))) else None
-              d_ct = ((cur_ct - base_ct)/base_ct*100.0) if (base_ct and isinstance(cur_ct,(int,float))) else None
+              d_rt = ((cur_rt - base_rt)/base_rt*100.0) if (base_rt and isinstance(cur_rt, (int, float))) else None
+              d_ct = ((cur_ct - base_ct)/base_ct*100.0) if (base_ct and isinstance(cur_ct, (int, float))) else None
 
               is_rt_reg = (d_rt is not None and d_rt < -tol_rt)
               is_ct_reg = (d_ct is not None and d_ct > tol_ct)
@@ -336,8 +333,8 @@ jobs:
               comment_body = ""
 
           # write files
-          check_body_path.write_text(check_body+"\n", encoding="utf-8")
-          pr_comment_path.write_text(comment_body+"\n", encoding="utf-8")
+          check_body_path.write_text(check_body + "\n", encoding="utf-8")
+          pr_comment_path.write_text(comment_body + "\n", encoding="utf-8")
 
           # exit with 1 if regressions are found, 0 otherwise
           sys.exit(1 if reg_found else 0)
@@ -357,7 +354,7 @@ jobs:
           else
             echo "CHECK_OUTPUT=" >> "$GITHUB_ENV"
           fi
-          
+
           # only set SCRIPT_OUTPUT when we actually want to comment
           if [ "${HAS_REGRESSIONS}" = "1" ] && [ -s "pr_comment.md" ]; then
             {
