--- a/.github/workflows/alarm.yml
+++ b/.github/workflows/alarm.yml
@@ -43,29 +43,8 @@ jobs:
           ls -la ${{ steps.dl.outputs.download-path }} || true
           (command -v tree >/dev/null && tree -a ${{ steps.dl.outputs.download-path }}) || true
 
-      - name: Resolve PR number
-        id: pr
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const wr = context.payload.workflow_run;
-            let pr = (wr.pull_requests && wr.pull_requests[0]) || null;
-
-            if (!pr) {
-              const sha = wr.head_sha;
-              const { data } = await github.rest.repos.listPullRequestsAssociatedWithCommit({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                commit_sha: sha,
-              });
-              if (data && data.length) pr = data[0];
-            }
-
-            core.setOutput('pr_number', pr ? String(pr.number) : '');
-
       - name: Check regressions + build outputs
         id: analyze
-        if: ${{ steps.pr.outputs.pr_number != '' }}
         env:
           # Note that secrets are not passed to workflows that are triggered by a pull request from a fork
           # --- W&B ---
@@ -194,10 +173,10 @@ jobs:
 
               # Make sure that stats are valid
               try:
-                for k in METRIC_KEYS:
-                  v = summary[k]
-                  if not isinstance(v, (float, int)) or math.isnan(v):
-                      continue
+                  for k in METRIC_KEYS:
+                      v = summary[k]
+                      if not isinstance(v, (float, int)) or math.isnan(v):
+                          continue
               except KeyError:
                   continue
 
@@ -226,8 +205,8 @@ jobs:
           for bid in sorted(current_bm.keys()):
               cur_rt = current_bm[bid]["runtime_fps"]
               cur_ct = current_bm[bid]["compile_time"]
-              base_rt = mean_of("runtime_fps", bid)
-              base_ct = mean_of("compile_time", bid)
+              base_rt = math.ceil(mean_of("runtime_fps", bid))
+              base_ct = math.ceil(mean_of("compile_time", bid))
 
               d_rt = (cur_rt - base_rt) / base_rt * 100.0
               d_ct = (cur_ct - base_ct) / base_ct * 100.0
@@ -301,6 +280,9 @@ jobs:
           sys.exit(1 if reg_found else 0)
           PY
 
+          # Enable command trace to ease debugging
+          set -o xtrace
+
           # Expose outputs to later steps
           if [ -f "${CHECK_BODY_PATH}" ]; then
             {
@@ -322,25 +304,25 @@ jobs:
           else
             echo "SCRIPT_OUTPUT=" >> "$GITHUB_ENV"
           fi
-
       - name: Add PR comment
-        if: ${{ steps.pr.outputs.pr_number != '' && env.SCRIPT_OUTPUT != '' }}
-        uses: actions/github-script@v7
+        if: ${{ env.SCRIPT_OUTPUT != '' }}
+        uses: actions/github-script@v8
         env:
+          PR_NUMBER: ${{ github.event.pull_request.number }}
           COMMENT_BODY: ${{ env.SCRIPT_OUTPUT }}
         with:
           script: |
-            const prNumber = Number('${{ steps.pr.outputs.pr_number }}');
+            const prNumber = ;
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: prNumber,
+              issue_number: Number(process.env.PR_NUMBER),
               body: process.env.COMMENT_BODY
             });
 
       - name: Publish PR check
         if: always()
-        uses: actions/github-script@v7
+        uses: actions/github-script@v8
         env:
           CHECK_NAME: Benchmark Comparison
           CHECK_BODY: ${{ env.CHECK_OUTPUT }}
