Cleanup example unit tests.

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -59,7 +59,7 @@ jobs:
         run: |
           pip install --upgrade pip setuptools wheel
           pip install torch --index-url https://download.pytorch.org/whl/cpu
-          pip install -e '.[dev]'
+          pip install -e '.[dev]' pynput
 
       - name: Run examples suite
         run: |
