--- a/.github/workflows/generic.yml
+++ b/.github/workflows/generic.yml
@@ -15,30 +15,30 @@ concurrency:
 
 jobs:
   generic-cpu:
-    name: ${{ matrix.OS }}-${{ matrix.PYTHON_VERSION }}-${{ matrix.GS_BACKEND }}-${{ matrix.GS_USE_NDARRAY == '1' && 'ndarray' || 'field' }}
+    name: ${{ matrix.OS }}-${{ matrix.PYTHON_VERSION }}-${{ matrix.GS_BACKEND }}-${{ matrix.GS_USE_NDARRAY == '1' && 'pure_ndarray' || 'field' }}
 
     strategy:
       fail-fast: false
       matrix:
         # See official Github documentation for details: https://shorturl.at/NJgsj
         OS: ["ubuntu-22.04", "ubuntu-24.04", "macos-15"]
-        PYTHON_VERSION: ["3.10", "3.11", "3.12", "3.13"]
+        PYTHON_VERSION: ["3.10", "3.13"] # half the python version to add matrix for GS_USE_NDARRAY
         GS_BACKEND: ["cpu"]
-        GS_USE_NDARRAY: ["0"]
+        GS_USE_NDARRAY: ["0", "1"]
         include:
           - OS: "windows-2025"
             PYTHON_VERSION: "3.12"
             GS_BACKEND: "cpu"
-            GS_USE_NDARRAY: "0"
+            GS_USE_NDARRAY: "1"
           - OS: "macos-15"
             PYTHON_VERSION: "3.12"
             GS_BACKEND: "gpu"
             GS_USE_NDARRAY: "0"
-          - OS: "ubuntu-24.04"
-            PYTHON_VERSION: "3.12"
-            GS_BACKEND: "cpu"
-            GS_USE_NDARRAY: "1"
 
+        # Exclude the macOS + "1" combinations
+        exclude:
+          - OS: "macos-15"
+            GS_USE_NDARRAY: "1"
     env:
       HF_HUB_DOWNLOAD_TIMEOUT: 60
       FORCE_COLOR: 1
