--- a/.github/workflows/alarm.yml
+++ b/.github/workflows/alarm.yml
@@ -312,17 +312,24 @@ jobs:
         if: ${{ env.SCRIPT_OUTPUT != '' }}
         uses: actions/github-script@v8
         env:
-          PR_NUMBER: ${{ github.event.pull_request.number }}
           COMMENT_BODY: ${{ env.SCRIPT_OUTPUT }}
         with:
           script: |
+            # Getting PR number when using 'workflow_run' is tricky.
+            # For reference, see: https://stackoverflow.com/a/75420270/4820605
+            const pr_number = (
+              await github.rest.repos.listPullRequestsAssociatedWithCommit({
+                commit_sha: context.sha,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+              })
+            ).data[0].number;
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: Number(process.env.PR_NUMBER),
+              issue_number: pr_number,
               body: process.env.COMMENT_BODY
             });
-
       - name: Publish PR check
         if: always()
         uses: actions/github-script@v8
