--- a/.github/workflows/alarm.yml
+++ b/.github/workflows/alarm.yml
@@ -319,8 +319,8 @@ jobs:
             // * https://docs.github.com/en/webhooks/webhook-events-and-payloads#workflow_run
             // * https://stackoverflow.com/a/75420270/4820605
             const { data } = await github.rest.repos.listPullRequestsAssociatedWithCommit({
-              owner: context.payload.workflow_run.repository.owner,
-              repo: context.payload.workflow_run.repository.name,
+              owner: context.payload.workflow_run.head_repository.owner.name,
+              repo: context.payload.workflow_run.head_repository.name,
               commit_sha: context.payload.workflow_run.head_sha,
             });
             if (!data || !data.length) {
