--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.10,<3.14"
 dependencies = [
     "psutil",
-    "gstaichi==2.6.0",
+    "gstaichi==2.7.0b4",
     "pydantic>=2.11.0",
     "numpy>=1.26.4",
     "trimesh",
