--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -73,7 +73,7 @@ jobs:
               pip install --no-input --extra-index-url https://pypi.nvidia.com/ omniverse-kit
               pip install --no-input ".[dev,render,usd]"
 
-              pytest -v --backend gpu --dev --forked ./tests
+              pytest -v --logical --backend gpu --dev --forked ./tests
           EOF
       - name: Run benchmarks
         run: |
