--- a/.github/workflows/generic.yml
+++ b/.github/workflows/generic.yml
@@ -119,9 +119,10 @@ jobs:
         id: artifact_prefix
         shell: bash
         run: |
-          GSTAICHI_VERSION=$(python -c "import importlib.metadata ; print(importlib.metadata.version('gstaichi'))")
           OS_FAMILY=$(python -c "import platform; print(platform.system())")
-          echo "ARTIFACT_PREFIX=${OS_FAMILY}-${GSTAICHI_VERSION}" >> $GITHUB_OUTPUT
+          MACHINE_ARCH=$(python -c "import platform; print(platform.machine())")
+          GSTAICHI_VERSION=$(python -c "import importlib.metadata ; print(importlib.metadata.version('gstaichi'))")
+          echo "ARTIFACT_PREFIX=${OS_FAMILY}-${MACHINE_ARCH}-${GSTAICHI_VERSION}" >> $GITHUB_OUTPUT
 
       - name: Restore Taichi Kernel Cache
         if: always()
